--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,12 @@ body {
       margin:0 auto;
 }
 
+.box {
+      margin-left: auto;
+      margin-right: auto;
+      width: 491px
+}
+
 .header {
       height:60px;
 }
@@ -24,7 +30,7 @@ body {
 }
 
 .letter h1 {
-      font-size: 450px;
+      font-size: 449px;
       margin-left:auto;
       margin-right: auto;
       margin-top: auto;
@@ -39,6 +45,5 @@ body {
 #button {
       width: 20px;
       height: 20px;
-      border-radius: 50%;
       background-color: #fd753f;
 }
