--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* Writing a Note Example */
 body {
       background-color: #ffffff;
-      font-family: "ITC Avant Garde Gothic", sans-serif;
+      font-family: "Helvetica", sans-serif;
       color: #000000;
       margin: 0;
       padding: 0;
