--- a/project-one/assets/wireframe-styles.css
+++ b/project-one/assets/wireframe-styles.css
@@ -57,8 +57,11 @@ body {
 
 .scrollbars {
   height: 150px;
+  width: 300px;
   background-color: #ecca67;
+  justify-content: left;
   margin-top: 40px;
+
 }
 footer {
 
