--- a/project-one/assets/wireframe-styles.css
+++ b/project-one/assets/wireframe-styles.css
@@ -66,6 +66,8 @@ body {
 
 footer {
   justify-content: right;
+  display: flex;
+  align-items: flex-end;
 }
           footer img {
             height:84px;
