--- a/project-one/assets/wireframe-styles.css
+++ b/project-one/assets/wireframe-styles.css
@@ -16,8 +16,10 @@ body {
 }
 
 .headline-box {
-  height: 200px;
+  height: 372px;
   width: 100%;
+  padding: 0;
+  margin: 0;
   background-color: #FF0000;
 }
 
