--- a/project-one/assets/wireframe-styles.css
+++ b/project-one/assets/wireframe-styles.css
@@ -13,20 +13,20 @@ body {
 
 .header {
   height: 25px;
+  background-color: #5C0BD6;
 }
 
 .headline-box {
-  height: 372px;
-  width: 100%;
+  height: 300px;
+  width: 50%;
   padding: 0;
   background-color: #FF0000;
-  margin-top: 50px;
+  justify-content: right;
 }
 
 .letter-box {
   height: 472px;
   width: 100%;
-  margin-top: 205px;
   background-color: #FDA6F7;
   display: flex;
   align-items: flex-end;
