--- a/project-one/assets/styles.css
+++ b/project-one/assets/styles.css
@@ -1,48 +1,142 @@
-/* Writing a Note Example */
 body {
-      background-color: #ffffff;
-      font-family: "Helvetica", sans-serif;
-      color: #000000;
-      margin: 0;
-      padding: 0;
+  padding: 0;
+  margin: 0;
+  background-color: #ffffff;
 }
 
 .container {
-      width:768px;
-      height:1024px;
-      margin:0 auto;
-}
-
-.box {
-      margin-left: auto;
-      margin-right: auto;
-      width: 491px;
+  width: 768px;
+  background-color: #5C0BD6;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header {
-      height:60px;
+  height: 25px;
+  background-color: #5C0BD6;
 }
 
-/* letter and paragraph */
-.letter {
-      display:flex;
-      align-items: right;
+.headline-box {
+  height: 338px;
+  width: 316px;
+  padding: 0;
+  background-color: #FF0000;
+  margin-left: 454px;
 }
 
-.letter h1 {
-      font-size: 449px;
-      margin-left:auto;
-      margin-right: auto;
-      margin-top: auto;
-      margin-bottom: auto;
-}
-/* button and headline */
-.headline {
-      display: flex;
+          h2 {
+            margin: 0;
+            padding: 0;
+            font-size: 90px;
+            line-height: 90px;
+            text-align: right;
+          }
+
+.letter-box-Q {
+  height: 467px;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: left;
 }
 
-#button {
-      width: 40px;
-      height: 40px;
-      background-color: #fd753f;
+          .letter-box-Q h1 {
+            line-height: 400px;
+            font-size: 600px;
+            height: 467px;
+            width: 483px;
+            padding: 0;
+            margin: 0;
+            background-color: #03DBF3;
+            margin-bottom: 0;
+          }
+
+          .letter-box-Q p {
+            text-align: right;
+            height: 195px;
+            width: 316px;
+            padding:0;
+            background-color: #008282;
+            margin-bottom: 50px;
+          }
+
+          .letter-box-Q #button {
+            height: 43px;
+            width: 43px;
+            background-color: #7EFF7E;
+            margin-left: 10px;
+          }
+
+.letter-box-K {
+  height: 467px;
+  width: 100%;
+  display: flex;
+  align-items: flex-end;
+  margin-top: 40px;
 }
+          .letter-box-K p {
+            height: 195px;
+            width: 316px;
+            padding:0;
+            background-color: #008282;
+          }
+
+          .letter-box-K h1 {
+            line-height: 400px;
+            font-size: 600px;
+            height: 467px;
+            width: 483px;
+            padding: 0;
+            margin: 0;
+            background-color: #03DBF3;
+            margin-bottom: 0;
+          }
+
+.scrollbars {
+  height: 150px;
+  width: 400px;
+  background-color: #ecca67;
+  margin-top: 40px;
+  margin-left: 40px;
+}
+
+          #capital {
+            background-color: #2003fc;
+          }
+
+          #lowercase {
+            background-color: #2003fc;
+          }
+
+footer {
+  background-color: #bada55;
+  display: flex;
+  margin-top: 40px;
+  margin-left: 300px;
+}
+            footer img {
+              height: 95px;
+              margin-right: 10px;
+            }
+
+            footer .author-heading {
+              background-color: #ffffff;
+            }
+
+            footer .author-heading h3 {
+              padding: 0;
+              margin: 0;
+            }
+
+            footer .author-heading h4 {
+              padding: 0;
+              margin: 0;
+            }
+
+            footer .author-heading #intro {
+              height: 20px;
+            }
+
+            footer .author-heading #citations {
+              height: 20px;
+            }
