--- a/project-one/assets/wireframe-styles.css
+++ b/project-one/assets/wireframe-styles.css
@@ -17,15 +17,15 @@ body {
 }
 
 .headline-box {
-  height: 400px;
-  width: 50%;
+  height: 338px;
+  width: 316px;
   padding: 0;
   background-color: #FF0000;
-  margin-left: 350px;
+  margin-left: 454px;
 }
 
-.letter-box {
-  height: 472px;
+.letter-box-Q {
+  height: 467px;
   width: 100%;
   background-color: #FDA6F7;
   display: flex;
@@ -33,8 +33,8 @@ body {
   justify-content: left;
 }
 
-          .letter-box h1 {
-            height: 472px;
+          .letter-box-Q h1 {
+            height: 467px;
             width: 483px;
             padding: 0;
             margin: 0;
@@ -42,43 +42,90 @@ body {
             margin-bottom: 0;
           }
 
-          .letter-box #button {
+          .letter-box-Q p {
+            height: 195px;
+            width: 316px;
+            padding:0;
+            background-color: #008282;
+            margin-bottom: 50px;
+          }
+
+          .letter-box-Q #button {
             height: 43px;
             width: 43px;
             background-color: #7EFF7E;
             margin-left: 10px;
           }
 
-          .letter-box p {
-            height: 300px;
-            width: 210px;
+.letter-box-K {
+  height: 467px;
+  width: 100%;
+  background-color: #FDA6F7;
+  display: flex;
+  align-items: flex-end;
+  margin-top: 40px;
+}
+          .letter-box-K p {
+            height: 195px;
+            width: 316px;
             padding:0;
             background-color: #008282;
-            margin-bottom: 50px;
+          }
+
+          .letter-box-K h1 {
+            height: 467px;
+            width: 483px;
+            padding: 0;
+            margin: 0;
+            background-color: #03DBF3;
+            margin-bottom: 0;
           }
 
 .scrollbars {
   height: 150px;
   width: 400px;
   background-color: #ecca67;
-  justify-content: left;
   margin-top: 40px;
   margin-left: 40px;
 }
+
+          #capital {
+            background-color: #2003fc;
+          }
+
+          #lowercase {
+            background-color: #2003fc;
+          }
 
 footer {
   background-color: #bada55;
   display: flex;
   margin-top: 40px;
+  margin-left: 300px;
 }
             footer img {
               height: 95px;
+              margin-right: 10px;
             }
 
             footer .author-heading {
-              height: 40px;
+              background-color: #ffffff;
             }
 
-            footer .sources {
-              height: 100px;
+            footer .author-heading h3 {
+              padding: 0;
+              margin: 0;
+            }
+
+            footer .author-heading h4 {
+              padding: 0;
+              margin: 0;
+            }
+
+            footer .author-heading #intro {
+              height: 20px;
+            }
+
+            footer .author-heading #citations {
+              height: 20px;
             }
