--- a/project-two/assets/wireframe-profile-styles.css
+++ b/project-two/assets/wireframe-profile-styles.css
@@ -1,6 +1,7 @@
 .container {
-  background-color: #AD8CEB;
+  background-image: url("Planet-Profiles-Background.png");
   width: 768px;
+  height: 1024px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -17,7 +18,8 @@
 }
 
 .profile-card {
-  background-color: #AD8CEB;
+  color: #fff;
+  font-family: Avenir, sans-serif;
   border: solid 2px #fff;
   border-radius: 1em;
   height: 610px;
@@ -26,7 +28,12 @@
   top: 50px;
   left: 80px;
   display: flex;
+  justify-content: flex-start;
 }
+          .planet-images image {
+            position: relative;
+            top: 5%;
+          }
 
           .profile-card h1 {
             position: relative;
@@ -42,9 +49,12 @@
             width: 300px;
           }
 
+
+
 .planets {
+  font-family: Avenir Next Condensed, sans-serif;
   position: relative;
-  bottom: -160px;
+  bottom: -250px;
   left:12%;
   width:35em;
   display: flex;
