--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ h1{
   margin-top: 50px;
 }
 
+#project-three{
+  text-align: center;
+  margin-top: 50px;
+}
+
 a {
   display: block;
   border: solid 2px #000;
